--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ footer {
 #nav li { display: flex; flex-wrap: wrap; justify-content: start; padding:0px; color: black; text-shadow: 1px 1px 5px #666; margin:0 1em 0 1em; cursor:pointer; }
 #nav > li > pre { display:none; margin-top:0px;margin-bottom:0px;padding-top:10px;padding-bottom:0px;padding-left:10px;}
 
-h1,h2 { text-align: center; text-shadow: 2px 2px 5px #9D78AD; }
+h1,h2,h3 { text-align: center; text-shadow: 2px 2px 5px #9D78AD; }
 h1 {margin-top:10px;}
 
 ul {margin:0px; padding:0px;}
