--- a/style.css
+++ b/style.css
@@ -9,12 +9,6 @@ main {
     flex-grow: 3;
     padding:10px;
 }
-footer {
-    padding: 1em;
-    display: flex;
-    border-top: black solid 1px;
-    justify-content: space-around;
-}
 
 #nav { display: flex; flex-direction: row; justify-content: center; }
 #nav li { display: flex; flex-wrap: wrap; justify-content: start; padding:0px; color: black; text-shadow: 1px 1px 5px #666; margin:0 1em 0 1em; cursor:pointer; }
@@ -219,7 +213,26 @@ input[type="range"].e::-moz-range-progress {
   background-color: green;
 }
 
-
+footer {
+    padding: 0.5em;
+    display: flex;
+    border-top: black solid 1px;
+    justify-content: space-between;
+}
+footer > span, a.ref_menu {
+    padding:5px;
+}
+a.ref_menu {
+    display:flex;
+    color:black;
+    text-decoration:none;
+    border: solid 1px;
+    border-radius: 5px;
+}
+a.ref_menu > span {
+    display: inline-block;
+    padding-left:10px;
+}
 
 
 
