--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ fieldset.res {
     max-width: 800px;
     margin: 2em auto 0px auto;
     border-radius: 25px;
-    box-shadow: 5px 5px 30px 10px rgba(0,0,0,0.75);
+    box-shadow: 5px 5px 30px 5px rgba(0,0,0,0.5);
 } 
 
 form.form > ol {
@@ -65,6 +65,7 @@ form input[type = submit] {
     background-color:#90f080;
     border-radius: 25px;
     cursor:pointer;
+    font-size: large;
 }
 
 legend.legend {
