--- a/style.css
+++ b/style.css
@@ -5,26 +5,31 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.ColorScheme-PositiveText { color:#27ae60; }
+.ColorScheme-Text { color:#232629; }
+.ColorScheme-NeutralText { color:#f67400; }
+        
 main {
     flex-grow: 3;
     padding:10px;
+    font-size: smaller;
 }
 
 #nav { display: flex; flex-direction: row; justify-content: center; }
 #nav li { display: flex; flex-wrap: wrap; justify-content: start; padding:0px; color: black; text-shadow: 1px 1px 5px #666; margin:0 1em 0 1em; cursor:pointer; }
-#nav > li > pre { display:none; margin-top:0px;margin-bottom:0px;padding-top:10px;padding-bottom:0px;padding-left:10px;}
+#nav > li > span { display:none; margin:0px;padding:0px;}
+#nav svg { width: 32px; height: 32px; }
 
 h1,h2,h3 { text-align: center; text-shadow: 2px 2px 5px #9D78AD; }
 h1 {margin-top:10px;}
-.files { padding-left: 5em; }
-.files > h5 {
-    margin: 0px;
-    font-size: inherit;
-    text-decoration: underline;
-}
 
 ul {margin:0px; padding:0px;}
 .svg_nav { max-height:2em;}
+.tx {line-height:2;}
+.svg_icon {
+    height:30px; width:30px; margin-right:10px;
+}
 
 .mono-col {
     margin: 1em auto;
@@ -57,6 +62,7 @@ ol li {
 ol , ul {
     list-style: none;
     padding:0px;
+    margin:0px;
 }
 
 form.form > ol {
@@ -112,17 +118,33 @@ legend.legend {
     border-width: 1px;
     border-radius: 5px;
     background-color:#d5dbec;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: bold;
     padding: 4px 20px 0px 20px;
 }
 
+.res > ul > li { padding: .2em 0 .2em 0; }
+.res > ul > hr { margin : 0px; color: #dda; }
 .date {
     font-weight: bold;
-    padding: 10px 0px 0px 10px;
-    display: inline-block;
 }
 
+.tags, .categories, .date { padding-right:.5em; }
+
+.tags, .categories, .datas, .date {
+    font-size:0.8em;
+}
+
+.datas { margin:0px; padding-left:1em; }
+
+.files { font-size:0.9em; display: block; }
+.files > a { text-decoration: none; }
+
+.files > h5 {
+    display:inline-block;
+    font-size: 0.8em;
+    margin:0px;
+}
 
 
 form label {
@@ -132,6 +154,10 @@ form label {
     border-radius: 4px;
     width:100%;
     font-weight: bold;
+}
+
+p.p {
+    font-weight:normal; line-height:1em; margin:3px 0px 5px 0px;
 }
 
 .help {
@@ -148,7 +174,7 @@ form label {
 }
 .span_ta {
     float: right;
-/*     padding:8px 8px 0 8px; */
+    padding:0px 8px 0 0px;
     font-size: small;
     font-stretch: condensed;
     font-weight: bold;
@@ -162,7 +188,8 @@ form label {
     padding-left: .8em;
     /*margin-top: .5em;
     flex-grow: 3;*/
-    font-size:0.9em;
+    font-size:0.8em;
+    line-height:2;
 }
 #lien {
     display: block;
@@ -177,23 +204,9 @@ form label {
 .message p {
     display: flex;
     align-items: normal;
+    margin: 8px 0 8px 0;
 }
 
-
-
-
-/*input[type=range]::-moz-range-progress {
-  background-color: green;
-  height: 1em;
-  border-radius: .5em;
-}
-
-input[type=range] {
-	-webkit-appearance: none;
-	height: 35px; /* pick your own value
-	padding: 0;	
-	/* your slider styles 
-}*/
 form.form output.w20 {
     text-align:center;
     width: 100%;
@@ -268,6 +281,12 @@ footer {
 footer > span, a.ref_menu {
     padding:5px;
 }
+footer svg {width:32px; height:32px;}
+
+ul.footer {
+    display: flex;
+    flex-direction: row;
+}
 a.ref_menu {
     display:flex;
     color:black;
@@ -289,7 +308,9 @@ a.ref_menu > span {
 
 
 @media (min-width:800px) {
-#nav > li > pre {display:inline-block;}
+main { font-size: initial; }    
+
+#nav > li > span {display:inline-block; padding-left:10px; }
     
 form.form > ol > li {
     display: flex;
@@ -310,9 +331,6 @@ form input , form select {
     font-size: 1.1em;
 }
 
-.logs {
-    font-size:1em;
-}
 .img_ta {
 /*     margin:8px; */
 }
@@ -322,8 +340,18 @@ form input , form select {
 .mono-col > li {
     font-size:120%;
 }
-.mono-col > li > input {
+.logs {
+    font-size:1.1em;
+    line-height:1.6;
 }
+
+.tags, .categories, .date { padding-right:1em; }
+
+.tags, .categories, .datas, .files, .date {
+    font-size:1em;
+}
+
+.res > ul > li { padding: .5em 0 .5em 0; }
     
 }
 
