--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,7 @@ main { padding-top: 180px; }
     display: flex;
     justify-content: center;
 }
-#logo svg {
-    width: 80px; height:120px;
-}
+#logo svg { width: 80px; height:80px; padding-top:5px; }
 
 #nav { display: flex; flex-direction: row; justify-content: center; }
 #nav li { display: flex; flex-wrap: wrap; justify-content: start; padding:0px; color: black; text-shadow: 1px 1px 5px #666; margin:0 1em 0 1em; cursor:pointer; }
@@ -40,7 +38,7 @@ main { padding-top: 180px; }
 #nav svg { width: 32px; height: 32px; }
 
 h1,h2,h3 { text-align: center; text-shadow: 2px 2px 5px #9D78AD; }
-h1 { font-family: titleFont; font-size: 60px; margin:30px 0 10px 0; }
+h1 { font-family: titleFont; font-size: 60px; margin:15px 0 10px 0; }
 
 ul {margin:0px; padding:0px;}
 .svg_nav { max-height:2em;}
@@ -296,6 +294,7 @@ footer {
     border-top: black solid 1px;
     justify-content: space-between;
 }
+footer li { cursor:pointer; }
 footer > span, a.ref_menu {
     padding:5px;
 }
@@ -328,9 +327,7 @@ a.ref_menu > span {
 @media (min-width:800px) {
 main { font-size: initial; padding-top: 220px; } 
 h1 { font-size:100px; margin:35px 0 10px 0;}
-#logo svg {
-    width: 120px; height: 170px;
-}
+#logo svg { width: 100px; height: 120px; padding-top:20px; }
 
 #nav > li > span {display:inline-block; padding-left:10px; }
     
