--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ main { padding-top: 180px; }
 .maj:hover {
     background-color: #008000;
     color:white;
+    cursor:pointer;
 }
 
 #nav { display: flex; flex-direction: row; justify-content: center; }
